# unixodbc-gui-qt

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.cvs  Makefile.svn  NEWS  README  README.build  README.cvs  README.dist  README.qmake  README.svn  acinclude.m4  common.pri  config.pri  configure.in  defines.pri  odbc.pri  qt.m4  unixODBC-GUI-Qt.pro  unixODBC-GUI-Qt.spec  unixODBC-GUI-Qt.vpj  unixODBC-GUI-Qt.vpw
ODBCCreateDataSourceQ4/: Makefile.am  ODBCCreateDataSourceQ4.pro  ODBCCreateDataSourceQ4.vpj  main.cpp
ODBCDataManagerQ4/: Add32.xpm  Attribute48.xpm  Connected48.xpm  DBrowser.cpp  DBrowser.h  DDataManager.cpp  DDataManager.h  DDiagnostic.cpp  DDiagnostic.h  DEdit.cpp  DEdit.h  DEditStatement.cpp  DEditStatement.h  DNode.cpp  DNode.h  DNodeAttribute.cpp  DNodeAttribute.h  DNodeConnection.cpp  DNodeConnection.h  DNodeDataSourceNameFile.cpp  DNodeDataSourceNameFile.h  DNodeDataSourceNameSystem.cpp  DNodeDataSourceNameSystem.h  DNodeDataSourceNameUser.cpp  DNodeDataSourceNameUser.h  DNodeDataSourceNames.cpp  DNodeDataSourceNames.h  DNodeDriver.cpp  DNodeDriver.h  DNodeDrivers.cpp  DNodeDrivers.h  DNodeODBC.cpp  DNodeODBC.h  DNodeSchema.cpp  DNodeSchema.h  DNodeSchemas.cpp  DNodeSchemas.h  DNodeStatement.cpp  DNodeStatement.h  DNodeTable.cpp  (+52 more)
ODBCManageDataSourcesQ4/: Makefile.am  ODBCManageDataSourcesQ4.pro  ODBCManageDataSourcesQ4.vpj  main.cpp
ODBCTestQ4/: DlgDbcConnect.cpp  DlgDbcConnect.h  DlgEnvAllocEnv.cpp  DlgEnvAllocEnv.h  DlgEnvAllocHandle.cpp  DlgEnvAllocHandle.h  DlgEnvDataSources.cpp  DlgEnvDataSources.h  DlgEnvDrivers.cpp  DlgEnvDrivers.h  DlgEnvEndTran.cpp  DlgEnvEndTran.h  DlgEnvFreeEnv.cpp  DlgEnvFreeEnv.h  DlgEnvFreeHandle.cpp  DlgEnvFreeHandle.h  DlgEnvTransact.cpp  DlgEnvTransact.h  DlgToolsManageAutoTest.cpp  DlgToolsManageAutoTest.h  DlgToolsManageTest.cpp  DlgToolsManageTest.h  DlgToolsManageTestGroup.cpp  DlgToolsManageTestGroup.h  DlgToolsNewGroup.cpp  DlgToolsNewGroup.h  DlgToolsNewSource.cpp  DlgToolsNewSource.h  DlgToolsRunAutoTests.cpp  DlgToolsRunAutoTests.h  Makefile.am  ODBCTestQ4-48.xpm  ODBCTestQ4.pro  ODBCTestQ4.vpj  OdbcHandle.cpp  OdbcHandle.h  OdbcTest.cpp  OdbcTest.h  README  attr.cpp  (+47 more)
Wrappers/: Makefile.am  Wrappers.pro  Wrappers.vpj
Wrappers/CPP/: CPP.vpj  Makefile.am
Wrappers/CPP/Application/: Application.pro  Makefile.am  main.cpp
Wrappers/CPP/include/: ODBC.h  ODBCConnection.h  ODBCConsole.h  ODBCDiagnostic.h  ODBCEnvironment.h  ODBCHandle.h  ODBCMessage.h  ODBCStatement.h  ODBCSystem.h  ODBCVariant.h
Wrappers/QtCore4/: Makefile.am  QtCore4.pro  QtCore4.vpj
Wrappers/QtCore4/Application/: Application.pro  Makefile.am  main.cpp
Wrappers/QtCore4/include/: Makefile.am  ODBCQConnection.h  OQ.h  OQConnection.h  OQConsole.h  OQDiagnostic.h  OQEnvironment.h  OQHandle.h  OQMessage.h  OQStatement.h  OQSystem.h
Wrappers/QtGui4/: Makefile.am  QtGui4.vpj
Wrappers/QtGui4/Application/: Application.pro  Connected16.xpm  Disconnected16.xpm  Execute16.xpm  Makefile.am  OQGConsole.cpp  OQGConsole.h  Stop16.xpm  main.cpp  odbcqg.cpp  odbcqg.h
Wrappers/QtGui4/include/: Makefile.am  ODBCQGConnection.h  ODBCQGEnvironment.h  ODBCQGLogin.h  ODBCQGMessageOutput.h  ODBCQGPropertiesDelegate.h  ODBCQGPropertiesDialog.h  ODBCQGPropertiesModel.h  ODBCQGProperty.h  ODBCQGStatement.h  ODBCQGSystem.h  OQGLogin.h  OQGMessageOutput.h  OQGPropertiesDialog.h  OQGPropertiesModel.h  OQGSystem.h
doc/: doc.vpj
gtrtstQ4/: Makefile.am  README  gtrtstQ4.exp  gtrtstQ4.pro  gtrtstQ4.vpj  szLogPrintf.cpp  szMessageBox.cpp
ini/: Makefile.am  ini.pro  ini.vpj  iniElement.c  iniOS2Profile.c  iniOpen.c  makefile.os2
odbcinstQ4/: About48.xpm  Advanced48.xpm  CAbout.cpp  CAbout.h  CAdvanced.cpp  CAdvanced.h  CDSNWizard.cpp  CDSNWizard.h  CDSNWizardDriver.cpp  CDSNWizardDriver.h  CDSNWizardEntre.cpp  CDSNWizardEntre.h  CDSNWizardFini.cpp  CDSNWizardFini.h  CDSNWizardProperties.cpp  CDSNWizardProperties.h  CDSNWizardType.cpp  CDSNWizardType.h  CDataSourceNameList.cpp  CDataSourceNameList.h  CDataSourceNames.cpp  CDataSourceNames.h  CDataSourceNamesFile.cpp  CDataSourceNamesFile.h  CDataSourceNamesFileModel.cpp  CDataSourceNamesFileModel.h  CDriverConnectPrompt.cpp  CDriverConnectPrompt.h  CDriverList.cpp  CDriverList.h  CDriverPrompt.cpp  CDriverPrompt.h  CFileSelector.cpp  CFileSelector.h  CHelp.cpp  CHelp.h  CManageDataSourceNames.cpp  CManageDataSourceNames.h  CManageDrivers.cpp  CManageDrivers.h  (+42 more)
