SUBDIRS = \
	ini \
	gtrtstQ4 \
	odbcinstQ4 \
	ODBCCreateDataSourceQ4 \
	ODBCManageDataSourcesQ4 \
	ODBCTestQ4 \
	Wrappers

EXTRA_DIST = \
	AUTHORS \
	ChangeLog \
	common.pri \
	config.pri \
	configure.in \
	COPYING \
	defines.pri \
	GPL.txt \
	INSTALL \
	LGPL.txt \
	Makefile.am \
	Makefile.svn \
	NEWS \
	odbc.pri \
	qt.m4 \
	README \
	README.svn \
	README.dist \
	README.qmake \
	unixODBC-GUI-Qt.pro \
	unixODBC-GUI-Qt.spec
	 


