EXTRA_DIST = \
	OQGPropertiesDelegate.h \
	OQGConnection.h \
	OQGEnvironment.h \
	OQGLogin.h \
	OQGMessageOutput.h \
	OQGPropertiesDialog.h \
	OQGPropertiesModel.h \
	OQGProperty.h \
	OQGStatement.h \
	OQGSystem.h

include_HEADERS = \
	OQGPropertiesDelegate.h \
	OQGConnection.h \
	OQGEnvironment.h \
	OQGLogin.h \
	OQGMessageOutput.h \
	OQGPropertiesDialog.h \
	OQGPropertiesModel.h \
	OQGProperty.h \
	OQGStatement.h \
	OQGSystem.h

